CICO-5247 Fixed the issue with rate ammount not showing on Check-out date in Room & Rates calender

--- a/stylesheets/less/app/05-C_plugins.less
+++ b/stylesheets/less/app/05-C_plugins.less
@@ -4903,7 +4903,7 @@
 				}  
 
 				/* Restore looks when dragging ***/
-				&.ui-draggable-dragging {
+				/*&.ui-draggable-dragging {
 					.fc-event-inner { height: 50px !important; }
 
 					&.check-in {
@@ -4920,7 +4920,7 @@
 							.fc-event-day { .show; }
 						}
 					} 
-				}
+				}*/
 			}
 		}		
 	
